[gd_scene load_steps=4 format=3 uid="uid://coqc58bx3qssx"]

[ext_resource type="Script" uid="uid://b0higgyro8j4c" path="res://base card/base_card.gd" id="1_2epty"]
[ext_resource type="Script" uid="uid://bh7xb5reas3q6" path="res://base card/card_control.gd" id="1_n6kkj"]
[ext_resource type="Texture2D" uid="uid://5y0v4qkfvbob" path="res://Base_Back_Card_124_176.png" id="2_lc7e7"]

[node name="BaseCard" type="Node2D"]
script = ExtResource("1_2epty")

[node name="CardControl" type="Control" parent="."]
custom_minimum_size = Vector2(124, 176)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n6kkj")
HP = null
ATK = null
PRICE = null
NAME = null
DESCRIPTION = null

[node name="CardTexture" type="Sprite2D" parent="CardControl"]
position = Vector2(62, 88)
texture = ExtResource("2_lc7e7")

[node name="DeleteButton" type="Button" parent="CardControl"]
layout_mode = 0
offset_right = 62.0
offset_bottom = 32.0
text = "Kill"

[connection signal="mouse_entered" from="CardControl" to="CardControl" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardControl" to="CardControl" method="_on_mouse_exited"]
[connection signal="pressed" from="CardControl/DeleteButton" to="." method="_on_delete_button_pressed"]
